# TakeFlight

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
Frontend/takeofftestapp/: index.html  package-lock.json  package.json
Frontend/takeofftestapp/src/: App.css  App.jsx
logs/: log_file
src/: app_network.rs  computer_vision.rs  debug_utils.rs  error.rs  hacks.rs  helper.rs  http_server.rs  logger.rs  main.rs  system_camera.rs  video_stream.rs
src/computer_vision/: mod.rs
src/database/: entry.rs  mod.rs
src/drone_interface/: crc.rs  mod.rs
src/drone_interface/drone_pro/: camera.rs  drone.rs  mod.rs
src/drone_interface/tello/: crc.rs  drone.rs  mod.rs  packet.rs  video_packet.rs
src/sql_scripts/create_tables/: drone_data_tb.sql  flight_log_tb.sql  flight_model_tb.sql  gesture_control_tb.sql
src/sql_scripts/entry/: drone_data_tb.sql  flight_log_tb.sql  flight_model_tb.sql  gesture_control_tb.sql
src/takeflight_computer_vision/: Cargo.toml  build.rs
src/takeflight_computer_vision/.cargo/: config.toml
src/takeflight_computer_vision/examples/: draw_fingers.rs
src/takeflight_computer_vision/model/: README.md
src/takeflight_computer_vision/src/: cv_base.rs  geometry.rs  hand_identifier.rs  hand_landmarker.rs  lib.rs
src/takeflight_computer_vision/src/tests/: computer_vision_test.rs  mod.rs
src/takeflight_computer_vision/tests/: geometry_tests.rs  identifier_tests.rs  landmarker_tests.rs  shared.rs
src/tests/: README.md  camera_conversion_test.rs  computer_vision_test.rs  conversion_tests.rs  drone_flight_tests.rs  http_server_tests.rs  mock_camera.rs  mod.rs  stream_tests.rs
src/video/: decode.rs  mod.rs  nalu.rs  rfc2435.rs  rtp.rs  video_queue.rs
takef/: .gitignore  README.md  pubspec.yaml
takef/android/app/: build.gradle.kts
takef/android/app/src/main/: AndroidManifest.xml
takef/android/app/src/main/kotlin/com/example/takef/: MainActivity.kt
takef/lib/: central_screen.dart  connect.dart  dflight_screen.dart  disconnect.dart  drone_info_tab.dart  flight_button.dart  flight_control_mode.dart  flight_logs_tab.dart  flight_screen.dart  gesture_tab.dart  joy_stick.dart  main.dart  mflight_screen.dart  msettings_screen.dart  personalization_tab.dart  record_button.dart  settings_screen.dart  video_feed.dart
takef/linux/: CMakeLists.txt
takef/linux/runner/: my_application.cc
takef/macos/Runner.xcodeproj/: project.pbxproj
takef/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
takef/macos/Runner/Configs/: AppInfo.xcconfig
takef/test/: widget_test.dart
takef/web/: index.html  manifest.json
takef/windows/: CMakeLists.txt
takef/windows/runner/: Runner.rc  main.cpp
