[package]
name = "TakeFlight"
version = "0.1.0"
edition = "2024"


[dependencies]
takeflight_computer_vision = { path= "src/takeflight_computer_vision" }

mio = { version="1.0.4", features = ["net", "os-poll"] }
local-ip-address = "0.6.5"
openh264 = "0.9.0"
tiny_http = "0.12"
# actix = "0.13.5"      # This will be used to talk to the React server, should we choose to go that route.
# rusqlite = "0.37.0"    # SQLite for Rust
image = "0.25.8"

ouroboros = "0.18.5"    # This is for self-referential code. Doesn't strictly provide functionality to the program.
zerocopy = "0.8.27" # This is for low-level byte operations on primitive types
lebe = "0.5.3"
serde = { version = "1.0.228", features = ["derive"] } #For the use of Seralize and Deseralize framwork
serde_json = "1.0.145"# for json to conversions
httparse = "1.10.1"
anyhow = "1.0.100"

[dev-dependencies]
nokhwa = { version="0.10.9", features = ["input-native"] }
rstest = "0.26.1"


[profile.test]
opt-level = 3

# When we add support for android, if there are additional dependecies to consider, this is how we do that.
#[target.aarch64-linux-android]


