[package]
name = "takeflight_computer_vision"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.8"
tflitec = "0.7.0"
rstest = "0.26.1"

ouroboros = "0.18.5"
anyhow = "1.0.100"
const_format = "0.2.35"
itertools = "0.14.0"

[dev-dependencies]
nokhwa = { version="0.10.9", features = ["input-native"] }
sdl3 = { version="0.16.1", features = ["build-from-source"] }

[[test]]
name="geometry_tests"
path="tests/geometry_tests.rs"

[[test]]
name="identifier_tests"
path="tests/identifier_tests.rs"

[[test]]
name="landmarker_tests"
path="tests/landmarker_tests.rs"

[[example]]
name="draw_fingers"
path="examples/draw_fingers.rs"